VideoDb: Add Primary Medium Type filter
Resolves #127
