# src/api/api.spec.yaml
@@ -297,7 +297,7 @@ paths:
         - in: query
           name: maxLength
           required: false
-          description: The maximum video length
+          description: The maximum video length to include
           schema:
             type: integer
             minimum: 0
@@ -311,7 +311,7 @@ paths:
         - in: query
           name: categories
           required: false
-          description: A list of categories
+          description: A list of categories to include
           explode: false
           style: pipeDelimited
           schema:
@@ -322,7 +322,7 @@ paths:
         - in: query
           name: tags
           required: false
-          description: A list of tags
+          description: A list of tags to include
           explode: false
           style: pipeDelimited
           schema:
@@ -333,7 +333,7 @@ paths:
         - in: query
           name: watchedStatuses
           required: false
-          description: A list of watched statuses
+          description: A list of watched statuses to include
           explode: false
           style: pipeDelimited
           schema:
@@ -344,7 +344,7 @@ paths:
         - in: query
           name: pmWatchedStatuses
           required: false
-          description: A list of primary medim watched statuses
+          description: A list of primary medium watched statuses to include
           explode: false
           style: pipeDelimited
           schema:
@@ -352,6 +352,17 @@ paths:
             minItems: 1
             items:
               $ref: '#/components/schemas/watchedStatus'
+        - in: query
+          name: primaryMediaTypes
+          required: false
+          description: A list of the primary media types to include
+          explode: false
+          style: pipeDelimited
+          schema:
+            type: array
+            minItems: 1
+            items:
+              $ref: '#/components/schemas/VideoMediaType'
       responses:
         '200':
           description: OK
